<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"
        tools:text="输入密码" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/layout_input_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:gravity="center">

        <View
            android:layout_width="@dimen/password_input_size"
            android:layout_height="@dimen/password_input_size"
            android:layout_margin="@dimen/password_input_margin"
            android:focusable="true"
            tools:background="@drawable/password_input" />

        <View
            android:layout_width="@dimen/password_input_size"
            android:layout_height="@dimen/password_input_size"
            android:layout_margin="@dimen/password_input_margin"
            android:focusable="true"
            tools:background="@drawable/password_not_input" />

        <View
            android:layout_width="@dimen/password_input_size"
            android:layout_height="@dimen/password_input_size"
            android:layout_margin="@dimen/password_input_margin"
            android:focusable="true"
            tools:background="@drawable/password_input" />

        <View
            android:layout_width="@dimen/password_input_size"
            android:layout_height="@dimen/password_input_size"
            android:layout_margin="@dimen/password_input_margin"
            android:focusable="true"
            tools:background="@drawable/password_not_input" />

        <View
            android:layout_width="@dimen/password_input_size"
            android:layout_height="@dimen/password_input_size"
            android:layout_margin="@dimen/password_input_margin"
            android:focusable="true"
            tools:background="@drawable/password_input" />

        <View
            android:layout_width="@dimen/password_input_size"
            android:layout_height="@dimen/password_input_size"
            android:layout_margin="@dimen/password_input_margin"
            android:focusable="true"
            tools:background="@drawable/password_not_input" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:textColor="#ff0000"
        android:textSize="14sp"
        tools:text=" Addd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/bt_1"
            style="@style/PasswordInputButton"
            android:text="@string/_1" />

        <Button
            android:id="@+id/bt_2"
            style="@style/PasswordInputButton"
            android:layout_marginLeft="@dimen/button_margin_horizontal"
            android:layout_marginRight="@dimen/button_margin_horizontal"
            android:text="@string/_2" />

        <Button
            android:id="@+id/bt_3"
            style="@style/PasswordInputButton"
            android:text="@string/_3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/bt_4"
            style="@style/PasswordInputButton"
            android:text="@string/_4" />

        <Button
            android:id="@+id/bt_5"
            style="@style/PasswordInputButton"
            android:layout_marginLeft="@dimen/button_margin_horizontal"
            android:layout_marginRight="@dimen/button_margin_horizontal"
            android:text="@string/_5" />

        <Button
            android:id="@+id/bt_6"
            style="@style/PasswordInputButton"
            android:text="@string/_6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/bt_7"
            style="@style/PasswordInputButton"
            android:text="@string/_7" />

        <Button
            android:id="@+id/bt_8"
            style="@style/PasswordInputButton"
            android:layout_marginLeft="@dimen/button_margin_horizontal"
            android:layout_marginRight="@dimen/button_margin_horizontal"
            android:text="@string/_8" />

        <Button
            android:id="@+id/bt_9"
            style="@style/PasswordInputButton"
            android:text="@string/_9" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_0"
        style="@style/PasswordInputButton"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/button_margin_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginRight="@dimen/button_margin_horizontal"
        android:text="@string/_0" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/bt_last_step"
            style="@style/PasswordInputButton"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/button_margin_horizontal"
            android:layout_marginRight="@dimen/button_margin_horizontal"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/last_step"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_backspace"
            style="@style/PasswordInputButton"
            android:layout_gravity="end"
            android:layout_marginLeft="@dimen/button_margin_horizontal"
            android:layout_marginRight="@dimen/button_margin_horizontal"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/delete"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>
</LinearLayout>
